<resources>
    <string name="app_name">ToDoList</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="CadTaref_namea">Cadastro de Tarefa</string>
    <string name="titulo">Título:</string>
    <string name="descricao">Descrição:</string>
    <string name="salvar">Salvar</string>
    <string name="data">Data:</string>
    <string name="escolher_data">Escolha a Data</string>
    <string name="campo_obrigatorio">Campo Obrigatorio</string>
    <string name="informe_data">Informe Data</string>


</resources>